--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vanilla-app-template",
+  "name": "devHunt-book-shelf",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -9,16 +9,16 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "glob": "^8.1.0",
-    "vite": "^4.0.0"
+    "glob": "^10.3.10",
+    "vite": "^4.4.11"
   },
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0",
+    "axios": "^1.5.1",
     "lodash.throttle": "^4.1.1",
     "notiflix": "^3.2.6",
     "vite-plugin-full-reload": "^1.0.5",
-    "vite-plugin-html-inject": "^1.0.1"
+    "vite-plugin-html-inject": "^1.0.4"
   }
 }
